# SensorFusionCameraLessons

L3_3_TTC_Camera/TTC_camera/: CMakeLists.txt
L3_3_TTC_Camera/TTC_camera/src/: compute_ttc_camera.cpp
L3_Lidar_Camera/TTC_lidar/: CMakeLists.txt
L3_Lidar_Camera/TTC_lidar/src/: compute_ttc_lidar.cpp
L4_5_Descriptor_Matching/descriptor_matching/: CMakeLists.txt
L4_5_Descriptor_Matching/descriptor_matching/src/: descriptor_matching.cpp
L4_Gaussian/gradient_filtering/: CMakeLists.txt
L4_Gaussian/gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp
L4_Gradient/describe_keypoints/: CMakeLists.txt
L4_Gradient/describe_keypoints/src/: describe_keypoints.cpp
L4_Harris/cornerness_harris/: CMakeLists.txt
L4_Harris/cornerness_harris/src/: cornerness_harris.cpp
L4_advanced_keypoints/detect_keypoints/: CMakeLists.txt
L4_advanced_keypoints/detect_keypoints/src/: detect_keypoints.cpp
